--- a/tutorials/大模型基础入门/3.transformer架构.md
+++ b/tutorials/大模型基础入门/3.transformer架构.md
@@ -1,88 +1,154 @@
-Transformer 架构教程（面向新手）
-引言
-Transformer 是一种革命性的神经网络架构，首次在 2017 年由 Google 研究人员在论文《Attention is All You Need》中提出。它最初被设计用于机器翻译任务，但由于其卓越的性能和灵活性，迅速成为自然语言处理（NLP）领域的标准模型，并扩展到计算机视觉、语音识别等其他领域。
-Transformer 的关键创新在于其自注意力（self-attention）机制，这允许模型在处理序列数据时关注输入序列中的不同部分，从而捕捉长距离依赖关系，而无需使用循环或卷积操作。这使得 Transformer 能够高效地处理长序列数据，并在并行计算中表现出色。
-本教程旨在为初学者提供一个全面而专业的 Transformer 架构介绍。我们将逐步讲解 Transformer 的各个组成部分，从输入处理到输出生成，并结合实际例子和图文说明，帮助您深入理解这一强大的模型。相比于现有的网页内容，本教程将更加详细、综合，并包含更多图文并茂的解释和案例。
-高级概览
-Transformer 架构由两个主要部分组成：编码器（Encoder）和解码器（Decoder）。在原始的 Transformer 模型中，编码器和解码器各包含多个相同的层（通常是 6 层），每层由两个子层组成：多头自注意力（Multi-Head Self-Attention）和前馈神经网络（Feed-Forward Neural Network）。此外，Transformer 还使用了残差连接（Residual Connections）和层归一化（Layer Normalization）来稳定训练过程。
-对于本教程，我们将重点关注解码器-仅 Transformer（如 GPT），因为它在许多现代语言模型中被广泛使用。以下是 Transformer 架构的主要步骤：
+# Transformer 架构教程
 
-分词（Tokenization）
-词嵌入（Word Embeddings）
-位置编码（Positional Encoding）
-Transformer 块（Transformer Block）
-残差连接和层归一化（Residual Connection and Layer Normalization）
-前馈神经网络（Feed-Forward Network）
-重复 Transformer 块
-输出概率（Output Probabilities）
+## 什么是 Transformer？
 
-步骤 1：分词（Tokenization）
-分词是将输入文本转换为模型可以处理的数字表示的过程。在 Transformer 中，输入文本首先被分割成一系列的 token，每个 token 对应一个单词或子词。然后，每个 token 被映射到一个独特的整数 ID。
-示例：对于句子 "Hello, world!"，分词器可能会将其分解为 ["Hello", ",", "world", "!"]，然后每个 token 被映射到其对应的 ID，例如 [100, 101, 102, 103]。
-代码示例：以下是一个使用 Python 和 tiktoken 库进行分词的简单示例：
+Transformer 是一种神经网络架构，最初由 Google 研究人员在 2017 年论文《[Attention is All You Need](https://arxiv.org/abs/1706.03762)》中提出，用于机器翻译。它通过自注意力机制（self-attention）处理序列数据，允许模型关注输入序列的不同部分，从而捕捉长距离依赖关系。与传统 RNN 不同，Transformer 支持并行计算，显著提高效率。
+
+本教程将重点讲解解码器-仅 Transformer（如 GPT），因为它在语言建模任务中广泛应用。我们将通过一个简单句子示例（“我爱深度学习”）逐步展示每个步骤的工作原理，确保初学者能够轻松理解。
+
+## 引言
+
+Transformer 架构自 2017 年提出以来，彻底改变了自然语言处理（NLP）领域。它通过自注意力机制高效捕捉序列中的长距离依赖，取代了传统的 RNN 和 CNN。研究表明，Transformer 的并行计算能力使其在机器翻译、文本生成等任务中表现卓越，成为 GPT、BERT 等模型的核心。
+
+## 高级概览
+
+Transformer 由编码器（Encoder）和解码器（Decoder）组成，每部分包含多个层（通常 6 层），每层有：
+
+- **多头自注意力**：关注序列不同部分，捕捉多种关系。
+- **前馈神经网络**：对每个位置独立处理，增加非线性。
+- **残差连接和层归一化**：稳定训练，改善梯度流动。
+
+<img src="../images/decoder-only-transformer.jpg" alt="decoder-only-transformer" style="zoom: 25%;" />
+
+本教程聚焦解码器-仅 Transformer，适用于语言建模。以下是主要步骤：
+
+| 步骤                   | 描述                             | 作用                               |
+| ---------------------- | -------------------------------- | ---------------------------------- |
+| 1. 分词                | 将文本分割为 token 并映射为 ID。 | 将文本转换为模型可处理的数字表示。 |
+| 2. 词嵌入              | 将 token ID 转为密集向量。       | 捕捉 token 的语义信息。            |
+| 3. 位置编码            | 添加序列位置信息。               | 提供 token 顺序信息。              |
+| 4. Transformer 块      | 包含多头自注意力和前馈网络。     | 捕捉序列依赖并处理表示。           |
+| 5. 残差连接和层归一化  | 稳定训练。                       | 改善梯度流动和训练稳定性。         |
+| 6. 前馈神经网络        | 独立处理每个位置。               | 增加非线性，增强表示能力。         |
+| 7. 重复 Transformer 块 | 堆叠多层。                       | 学习复杂模式。                     |
+| 8. 输出概率            | 生成下一个 token 的概率。        | 预测输出序列。                     |
+
+## 步骤 1：分词（Tokenization）
+
+### 什么是分词？
+
+分词是将输入文本分解为较小单元（token）的过程，这些单元可以是单词、子词或字符。每个 token 被映射到一个唯一的整数 ID，作为模型的输入。
+
+### 为什么需要分词？
+
+神经网络无法直接处理文本，需要将文本转换为数字表示。分词将文本分解为离散单元，允许模型通过嵌入层将这些单元转换为向量。此外，分词处理未知词汇（OOV），通过子词分词（如 BPE）将未知词分解为常见子词。
+
+### 如何在 Transformer 中实现分词？
+
+Transformer 通常使用子词分词技术，如 Byte Pair Encoding（BPE）或 WordPiece。这些方法通过统计分析构建词汇表，平衡词汇表大小和覆盖率。例如，BPE 从字符开始，逐步合并高频字符对，形成子词。
+
+**示例：**
+对于句子“我爱深度学习”，分词器可能将其分解为 ["我", "爱", "深度", "学习"]，映射为 ID [100, 101, 102, 103]。若“深度学习”不在词汇表中，可能分解为 ["深", "度", "学", "习"]。
+
+**代码示例：**
+
+```python
 import tiktoken
 
-text = "Hello, world!"
+text = "我爱深度学习"
 tokenizer = tiktoken.get_encoding("gpt2")
 tokens = tokenizer.encode(text)
-print(tokens)  # 输出: [100, 101, 102, 103]
+print(tokens)  # 示例输出: [100, 101, 102, 103]
+```
 
-可视化：参考 The Illustrated Transformer (中文翻译) 中的分词示例图，展示文本如何被分割为 token。
-补充说明：分词是 NLP 中非常重要的一步，不同的语言和任务可能需要不同的分词策略。例如，在中文中，由于没有明显的单词边界，分词通常需要更复杂的算法，如基于规则的分词或基于机器学习的分词。常用的中文分词工具包括 jieba 和 THULAC。
-步骤 2：词嵌入（Word Embeddings）
-词嵌入是将每个 token 的 ID 转换为密集的向量表示。这些向量捕捉了 token 在语义上的含义，并作为 Transformer 模型的输入。
-在 Transformer 中，词嵌入通常是通过查找表（Look-Up Table）实现的，其中每个 token ID 对应一个固定大小的向量（例如，维度为 512）。
-示例：假设我们有一个词汇表大小为 100,000 的模型，每个 token ID 都被映射到一个 512 维的向量。例如，token ID 100 的嵌入可能是一个 512 维的向量，如 [0.1, 0.2, ..., 0.5]。
-表格：词嵌入查找表示例
+**可视化：**
+参考《[The Illustrated Transformer](https://jalammar.github.io/illustrated-transformer/)》中的分词图，展示文本如何被分割为 token。
 
+**补充说明：**
+中文分词因缺乏明显词界而需复杂算法，常用工具如 `jieba`。子词分词在多语言模型中更常见，因其能处理多种语言的未知词汇。
 
+## 步骤 2：词嵌入（Word Embeddings）
 
-Token ID
-词嵌入向量（部分维度）
+### 什么是词嵌入？
 
+词嵌入是将 token ID 转换为密集向量表示的过程。这些向量捕捉 token 的语义信息，作为 Transformer 的输入。
 
+### 为什么需要词嵌入？
 
-100
-[0.1, 0.2, 0.3, ...]
+词嵌入将离散的 token 转换为连续的向量空间，使模型能够学习词汇之间的语义关系。例如，“猫”和“狗”的嵌入向量可能更接近，而与“桌子”较远。这种表示有助于模型理解上下文和泛化。
 
+### 如何在 Transformer 中实现词嵌入？
 
-101
-[0.4, 0.5, 0.6, ...]
+通过查找表（Look-Up Table），每个 token ID 对应一个固定维度向量（例如 512 维）。嵌入矩阵的形状为 (词汇表大小, 嵌入维度)，如 (100,000, 512)。
 
+**示例：**
+对于“我爱深度学习”的 token ID [100, 101, 102, 103]，假设嵌入维度为 512，嵌入矩阵将生成形状为 (4, 512) 的向量表示。
 
-102
-[0.7, 0.8, 0.9, ...]
+**表格：词嵌入示例**
 
+| Token ID     | 词嵌入向量（部分维度） |
+| ------------ | ---------------------- |
+| 100 ("我")   | [0.1, 0.2, 0.3, ...]   |
+| 101 ("爱")   | [0.4, 0.5, 0.6, ...]   |
+| 102 ("深度") | [0.7, 0.8, 0.9, ...]   |
+| 103 ("学习") | [0.2, 0.3, 0.4, ...]   |
 
-代码示例：以下是一个使用 PyTorch 实现词嵌入的简单示例：
+**代码示例：**
+
+```python
 import torch
 import torch.nn as nn
 
 vocab_size = 100000
 d_model = 512
 embedding = nn.Embedding(vocab_size, d_model)
-token_ids = torch.tensor([100, 101, 102])
+token_ids = torch.tensor([100, 101, 102, 103])
 embedded = embedding(token_ids)
-print(embedded.shape)  # 输出: torch.Size([3, 512])
+print(embedded.shape)  # 输出: torch.Size([4, 512])
+```
 
-补充说明：词嵌入是 Transformer 中最基础的表示方式之一，它将离散的 token 转换为连续的向量空间。不同的预训练模型（如 Word2Vec、GloVe、BERT）可能使用不同的词嵌入方式，但核心思想都是将单词映射到一个低维空间中。
-步骤 3：位置编码（Positional Encoding）
-由于 Transformer 架构中没有循环或卷积操作，因此模型无法直接捕捉输入序列中的位置信息。为了解决这个问题，位置编码被添加到词嵌入中，以提供每个 token 在序列中的相对或绝对位置信息。
-位置编码通常是通过正弦和余弦函数生成的，这样可以确保位置信息是可学习的，并且可以与词嵌入相加。
-公式：对于位置 (i) 和维度 (j)，位置编码定义为：
+**补充说明：**
+词嵌入通常通过训练学习，初始为随机值。预训练模型（如 BERT）可能使用上下文嵌入，但解码器-仅 Transformer 使用静态嵌入。
 
-(PE(i, 2j) = \sin(i / 10000^{2j/d}))
-(PE(i, 2j+1) = \cos(i / 10000^{2j/d}))
+## 步骤 3：位置编码（Positional Encoding）
 
-其中 (d) 是嵌入维度（例如 512），(j) 是维度的索引。
-示例：对于一个长度为 10 的序列，位置编码可以生成一个 (10 \times 512) 的矩阵，添加到词嵌入中。
-代码示例：以下是一个使用 PyTorch 实现位置编码的示例：
+### 什么是位置编码？
+
+位置编码是为每个 token 添加位置信息的机制，因为 Transformer 没有循环或卷积操作来捕捉 token 顺序。
+
+### 为什么需要位置编码？
+
+自注意力机制是置换不变的，不考虑 token 顺序。例如，没有位置编码，模型无法区分“我爱深度学习”和“学习深度爱我”。位置编码通过为每个位置生成唯一向量，告知模型 token 的相对或绝对位置。
+
+### 如何在 Transformer 中实现位置编码？
+
+使用正弦和余弦函数生成位置编码，公式为：
+
+- ( PE(pos, 2i) = \sin(pos / 10000^{2i / d_{model}}) )
+- ( PE(pos, 2i+1) = \cos(pos / 10000^{2i / d_{model}}) )
+
+其中 ( pos ) 是位置，( i ) 是维度索引，( d_{model} ) 是嵌入维度（如 512）。这些函数生成周期性信号，低维度捕捉高频（局部）信息，高维度捕捉低频（全局）信息。
+
+**为什么使用正弦和余弦？**
+正弦和余弦函数是周期性的，允许模型学习相对位置关系，且对未见过的序列长度具有泛化能力。它们还确保编码值在 [-1, 1] 范围内，与词嵌入兼容。
+
+**示例：**
+对于“我爱深度学习”（4 个 token），位置编码生成形状为 (4, 512) 的矩阵，添加到词嵌入中。假设 ( d_{model} = 4 )，位置 0 和 1 的编码如下：
+
+| 位置 | 维度 0                 | 维度 1                 | 维度 2                    | 维度 3               |
+| ---- | ---------------------- | ---------------------- | ------------------------- | -------------------- |
+| 0    | sin(0/10000^0) ≈ 0     | cos(0/10000^0) ≈ 1     | sin(0/10000^2/4) ≈ 0      | cos(0/10000^2/4) ≈ 1 |
+| 1    | sin(1/10000^0) ≈ 0.841 | cos(1/10000^0) ≈ 0.540 | sin(1/10000^2/4) ≈ 0.0001 | cos(1/10000^2/4) ≈ 1 |
+
+**代码示例：**
+
+```python
 import torch
 import math
 
 class PositionalEncoding(nn.Module):
     def __init__(self, d_model, max_len=5000):
-        super(PositionalEncoding, self).__init__()
+        super().__init__()
         pe = torch.zeros(max_len, d_model)
         position = torch.arange(0, max_len, dtype=torch.float).unsqueeze(1)
         div_term = torch.exp(torch.arange(0, d_model, 2).float() * (-math.log(10000.0) / d_model))
@@ -93,111 +159,137 @@ class PositionalEncoding(nn.Module):
 
     def forward(self, x):
         return x + self.pe[:, :x.size(1)]
+```
 
-d_model = 512
-pos_encoder = PositionalEncoding(d_model)
-x = torch.zeros(1, 10, d_model)  # 假设输入序列长度为 10
-encoded = pos_encoder(x)
-print(encoded.shape)  # 输出: torch.Size([1, 10, 512])
+**可视化：**
+参考《[The Illustrated Transformer](https://jalammar.github.io/illustrated-transformer/)》中的位置编码图，展示正弦和余弦波形如何随位置变化。
 
-可视化：参考 The Illustrated Transformer (中文翻译) 中的位置编码图，展示正弦和余弦函数的波形。
-补充说明：位置编码是 Transformer 的一个关键创新点，它解决了传统 RNN 和 CNN 在处理长序列时无法有效捕捉位置信息的问题。使用正弦和余弦函数生成的位置编码具有可学习性，并且可以与词嵌入进行线性组合。
-步骤 4：Transformer 块（Transformer Block）
-Transformer 块是 Transformer 架构的核心组件，每个块包含多头自注意力和前馈神经网络两个子层。
-4.1 多头自注意力概览（Multi-Head Attention Overview）
-多头自注意力允许模型同时关注输入序列的不同部分。它通过创建多个注意力“头”，每个头可以关注不同的信息方面，然后将这些注意力表示组合起来。
-示例：假设我们有一个长度为 10 的序列，使用 8 个注意力头，每个头可以关注序列中的不同部分（例如，第一个头关注句子的主语，第二个头关注动词等）。
-可视化：参考 The Illustrated Transformer (中文翻译) 中的多头注意力图，展示多个注意力头的并行计算。
-4.2 准备 Q、K、V（Prepare Q, K, V）
-在自注意力机制中，每个 token 被转换为三个向量：查询（Query, Q）、键（Key, K）和值（Value, V）。这些向量是通过线性变换从输入嵌入中获得的。
-示例：对于一个输入序列长度为 10，嵌入维度为 512，Q、K、V 的维度分别为 (10 \times 512)。
-代码示例：以下是一个使用 PyTorch 实现 Q、K、V 计算的示例：
-import torch
-import torch.nn as nn
+## 步骤 4：Transformer 块（Transformer Block）
 
-d_model = 512
-num_heads = 8
-d_k = d_model // num_heads  # 每个头的维度为 64
+### 什么是 Transformer 块？
 
-q_linear = nn.Linear(d_model, d_model)
-k_linear = nn.Linear(d_model, d_model)
-v_linear = nn.Linear(d_model, d_model)
+Transformer 块是 Transformer 架构的核心，包含多头自注意力和前馈神经网络两个子层，每个子层后接残差连接和层归一化。
 
-x = torch.rand(1, 10, d_model)  # 假设输入序列长度为 10
-q = q_linear(x)  # [1, 10, 512]
-k = k_linear(x)  # [1, 10, 512]
-v = v_linear(x)  # [1, 10, 512]
+### 为什么需要 Transformer 块？
 
-4.3 计算 QK 注意力（Calculate QK Attention）
-计算 Q 和 K 的点积，以获得注意力分数。这表示每个查询与每个键之间的相似度。
-示例：对于一个查询 (Q_i) 和所有键 (K_j)，注意力分数为 (score = Q_i \cdot K_j^T)。
-4.4 缩放（Scale）
-由于点积可能导致数值不稳定，因此注意力分数被缩放，除以平方根的 (d_k)（每个注意力头的维度）。
-示例：如果每个注意力头的维度为 64，则缩放因子为 (\sqrt{64} = 8)。
-4.5 掩码（Mask）
-在某些情况下（如解码器自注意力），需要掩码未来位置的 token，以防止模型在生成时看到未来的信息。
-示例：在生成第 (t) 个 token 时，模型只能看到第 (t) 个 token 之前的 token。
-可视化：参考 The Illustrated Transformer (中文翻译) 中的掩码矩阵图。
-代码示例：以下是一个实现掩码的 PyTorch 示例：
+Transformer 块通过自注意力捕捉序列中的依赖关系，通过前馈网络增加非线性，允许模型学习复杂模式。残差连接和层归一化确保深层网络的训练稳定性。
+
+#### 4.1 多头自注意力概览
+
+**什么是自注意力？**
+自注意力是一种机制，允许每个 token 关注序列中的所有其他 token，计算它们之间的相关性。它通过查询（Query）、键（Key）和值（Value）向量实现。
+
+**什么是多头自注意力？**
+多头自注意力将自注意力分成多个“头”，每个头关注序列的不同方面（如语法、语义），然后将结果拼接起来。
+
+**为什么使用多头自注意力？**
+多头机制增加模型容量，允许同时学习多种关系。例如，一个头可能关注主语-动词关系，另一个关注修饰语。
+
+**数值示例：**
+对于“我爱深度学习”（4 个 token），假设 ( d_{model} = 4 )，单头注意力，( d_k = d_v = 4 )。假设嵌入向量为：
+
+- “我”: [1, 0, 0, 0]
+- “爱”: [0, 1, 0, 0]
+- “深度”: [0, 0, 1, 0]
+- “学习”: [0, 0, 0, 1]
+
+通过线性变换生成 Q、K、V（简化假设 Q = K = V = 嵌入向量）：
+
+- 分数：( \text{score} = \frac{QK^T}{\sqrt{d_k}} )，( d_k = 4 )
+- 对于“我”：( Q_1 \cdot K^T = [1, 0, 0, 0] )，分数 = [1, 0, 0, 0] / 2 = [0.5, 0, 0, 0]
+- Softmax：[0.576, 0.141, 0.141, 0.141]
+- 输出：0.576*[1,0,0,0] + 0.141*[0,1,0,0] + 0.141*[0,0,1,0] + 0.141*[0,0,0,1] ≈ [0.576, 0.141, 0.141, 0.141]
+
+**可视化：**
+参考《[The Illustrated Transformer](https://jalammar.github.io/illustrated-transformer/)》中的注意力图，展示注意力权重如何连接不同 token。
+
+#### 4.2 准备 Q、K、V
+
+通过线性变换从输入嵌入生成 Q、K、V 向量，矩阵形状为 ( (d_{model}, d_{model}) )。
+
+#### 4.3 计算 QK 注意力
+
+计算 Q 和 K 的点积，得到注意力分数。
+
+#### 4.4 缩放
+
+分数除以 (\sqrt{d_k})，防止大值导致 softmax 饱和。
+
+#### 4.5 掩码
+
+在解码器中，使用因果掩码（causal mask）防止模型关注未来 token。例如，对于“我爱深度学习”，生成“学习”时只能看到“我爱深度”。
+
+**代码示例：**
+
+```python
 def create_mask(size):
     mask = torch.triu(torch.ones(size, size), diagonal=1).bool()
     return mask
+```
 
-seq_len = 10
-mask = create_mask(seq_len)
-print(mask)
+#### 4.6 Softmax
 
-4.6 Softmax
-将缩放后的注意力分数通过 softmax 函数，转换为概率分布，表示每个查询对每个键的关注程度。
-示例：一个注意力分数矩阵可能为：[\begin{bmatrix}0.2 & 0.3 & 0.5 \0.1 & 0.4 & 0.5 \\end{bmatrix}]经过 softmax 后成为概率分布。
-4.7 计算 V 注意力（Calculate V Attention）
-使用 softmax 得到的注意力权重与 V 相乘，获得每个查询的加权值表示。
-示例：如果注意力权重为 ([0.2, 0.3, 0.5])，V 为 ([V_1, V_2, V_3])，则输出为 (0.2 \cdot V_1 + 0.3 \cdot V_2 + 0.5 \cdot V_3)。
-4.8 拼接和输出（Concatenate and Output）
-将所有注意力头的输出拼接在一起，并通过一个线性层和残差连接，得到最终的注意力输出。
-代码示例：以下是一个完整的多头注意力实现：
+将分数通过 softmax 转换为概率分布。
+
+#### 4.7 计算 V 注意力
+
+使用注意力权重加权 V，生成上下文向量。
+
+#### 4.8 拼接和输出
+
+拼接多头输出，通过线性层生成最终注意力输出。
+
+**代码示例：**
+
+```python
 class MultiHeadAttention(nn.Module):
     def __init__(self, d_model, num_heads):
-        super(MultiHeadAttention, self).__init__()
+        super().__init__()
         self.d_model = d_model
         self.num_heads = num_heads
         self.d_k = d_model // num_heads
-        
         self.q_linear = nn.Linear(d_model, d_model)
         self.k_linear = nn.Linear(d_model, d_model)
         self.v_linear = nn.Linear(d_model, d_model)
         self.out_linear = nn.Linear(d_model, d_model)
-        
+
     def forward(self, q, k, v, mask=None):
         batch_size = q.size(0)
-        
         q = self.q_linear(q).view(batch_size, -1, self.num_heads, self.d_k).transpose(1, 2)
         k = self.k_linear(k).view(batch_size, -1, self.num_heads, self.d_k).transpose(1, 2)
         v = self.v_linear(v).view(batch_size, -1, self.num_heads, self.d_k).transpose(1, 2)
-        
         scores = torch.matmul(q, k.transpose(-2, -1)) / math.sqrt(self.d_k)
         if mask is not None:
-            scores = scores.masked_fill(mask == True, -1e9)
+            scores = scores.masked_fill(mask == 0, -1e9)
         attention = torch.softmax(scores, dim=-1)
         context = torch.matmul(attention, v)
-        
         context = context.transpose(1, 2).contiguous().view(batch_size, -1, self.d_model)
-        output = self.out_linear(context)
-        return output
+        return self.out_linear(context)
+```
 
-mha = MultiHeadAttention(d_model=512, num_heads=8)
-x = torch.rand(1, 10, 512)
-output = mha(x, x, x)
-print(output.shape)  # 输出: torch.Size([1, 10, 512])
+## 步骤 5：残差连接和层归一化
 
-步骤 5：残差连接和层归一化（Residual Connection and Layer Normalization）
-残差连接允许梯度在深层网络中更容易地流动，而层归一化帮助稳定化训练过程，并加速收敛。
-示例：如果输入为 (x)，Transformer 块的输出为 (y)，则残差连接后的输出为 (x + y)，然后应用层归一化。
-可视化：参考 The Illustrated Transformer (中文翻译) 中的残差连接图。
-代码示例：以下是一个实现残差连接和层归一化的示例：
+### 什么是残差连接和层归一化？
+
+残差连接将子层的输入添加到其输出，层归一化对每个位置的特征进行归一化。
+
+### 为什么需要残差连接？
+
+残差连接通过 ( x + \text{sub-layer}(x) ) 允许梯度直接流动，缓解深层网络的梯度消失问题。
+
+### 为什么需要层归一化？
+
+层归一化通过标准化每个位置的特征（均值为 0，方差为 1），减少内部协变量偏移，稳定训练。
+
+**示例：**
+对于“我爱深度学习”的嵌入向量，经过多头注意力后，残差连接将输入嵌入与注意力输出相加，然后归一化。
+
+**代码示例：**
+
+```python
 class TransformerBlock(nn.Module):
     def __init__(self, d_model, num_heads):
-        super(TransformerBlock, self).__init__()
+        super().__init__()
         self.mha = MultiHeadAttention(d_model, num_heads)
         self.norm1 = nn.LayerNorm(d_model)
         self.ffn = nn.Sequential(
@@ -206,76 +298,130 @@ class TransformerBlock(nn.Module):
             nn.Linear(d_model * 4, d_model)
         )
         self.norm2 = nn.LayerNorm(d_model)
-        
+        self.dropout = nn.Dropout(0.1)
+
     def forward(self, x, mask=None):
         attn_output = self.mha(x, x, x, mask)
-        x = self.norm1(x + attn_output)
+        x = self.norm1(x + self.dropout(attn_output))
         ffn_output = self.ffn(x)
-        x = self.norm2(x + ffn_output)
+        x = self.norm2(x + self.dropout(ffn_output))
         return x
+```
 
-block = TransformerBlock(d_model=512, num_heads=8)
-x = torch.rand(1, 10, 512)
-output = block(x)
-print(output.shape)  # 输出: torch.Size([1, 10, 512])
+## 步骤 6：前馈神经网络
 
-步骤 6：前馈神经网络（Feed-Forward Network）
-每个 Transformer 块中的前馈神经网络是对每个位置的表示独立应用的全连接神经网络。它通常包含两个线性变换和一个非线性激活函数（如 ReLU）。
-示例：对于一个输入向量 (x)，前馈网络的计算为：[\text{FFN}(x) = \text{ReLU}(W_1x + b_1)W_2 + b_2]
-步骤 7：重复步骤 4-6（Repeat Steps 4-6）
-Transformer 模型包含多个 Transformer 块（例如，6 个），每个块都应用上述步骤。
-示例：一个 6 层的 Transformer 模型会将输入序列通过 6 个 Transformer 块依次处理。
-代码示例：以下是一个多层 Transformer 的实现：
-class Transformer(nn.Module):
-    def __init__(self, d_model, num_heads, num_layers):
-        super(Transformer, self).__init__()
-        self.blocks = nn.ModuleList([
-            TransformerBlock(d_model, num_heads) for _ in range(num_layers)
-        ])
-        
-    def forward(self, x, mask=None):
-        for block in self.blocks:
-            x = block(x, mask)
-        return x
+### 什么是前馈神经网络？
 
-transformer = Transformer(d_model=512, num_heads=8, num_layers=6)
-x = torch.rand(1, 10, 512)
-output = transformer(x)
-print(output.shape)  # 输出: torch.Size([1, 10, 512])
+前馈神经网络是对每个位置独立应用的全连接网络，通常包含两个线性层和 ReLU 激活。
 
-步骤 8：输出概率（Output Probabilities）
-最后，通过一个线性层和 softmax 函数，将 Transformer 块的输出转换为每个 token 的概率分布，表示下一个 token 的预测。
-示例：对于一个词汇表大小为 10,000 的模型，输出是一个 (1 \times 10,000) 的概率分布，表示下一个 token 的可能性。
-代码示例：以下是一个实现输出概率的示例：
+### 为什么需要前馈神经网络？
+
+它为模型引入非线性，允许学习更复杂的模式。每个位置独立处理，确保计算效率。
+
+**公式：**
+[ \text{FFN}(x) = \max(0, x W_1 + b_1) W_2 + b_2 ]
+
+**示例：**
+对于“我”的嵌入向量 [0.576, 0.141, 0.141, 0.141]，FFN 可能将其扩展到更高维度（如 2048），应用 ReLU，然后投影回 512 维。
+
+## 步骤 7：重复 Transformer 块
+
+### 为什么需要重复 Transformer 块？
+
+堆叠多个 Transformer 块（如 6 层）增加模型深度，允许学习更复杂的模式。每一层进一步精炼表示。
+
+**示例：**
+对于“我爱深度学习”，6 层 Transformer 块依次处理嵌入向量，逐步捕捉更高级的语义关系。
+
+## 步骤 8：输出概率
+
+### 什么是输出概率？
+
+通过线性层将 Transformer 块的输出投影到词汇表大小，然后通过 softmax 生成每个 token 的概率分布。
+
+### 为什么需要输出概率？
+
+输出概率用于预测下一个 token，例如在语言建模中，模型预测“我爱深度学习”后的下一个词。
+
+**示例：**
+假设词汇表大小为 10,000，输出为 (4, 10,000) 的概率分布，表示每个 token 的下一个 token 概率。
+
+**代码示例：**
+
+```python
 class LanguageModel(nn.Module):
     def __init__(self, vocab_size, d_model, num_heads, num_layers):
-        super(LanguageModel, self).__init__()
+        super().__init__()
         self.embedding = nn.Embedding(vocab_size, d_model)
         self.pos_encoder = PositionalEncoding(d_model)
-        self.transformer = Transformer(d_model, num_heads, num_layers)
+        self.transformer = nn.ModuleList([TransformerBlock(d_model, num_heads) for _ in range(num_layers)])
         self.fc = nn.Linear(d_model, vocab_size)
-        
+
     def forward(self, x, mask=None):
         x = self.embedding(x)
         x = self.pos_encoder(x)
-        x = self.transformer(x, mask)
-        x = self.fc(x)
-        return x
+        for block in self.transformer:
+            x = block(x, mask)
+        return self.fc(x)
+```
 
-model = LanguageModel(vocab_size=10000, d_model=512, num_heads=8, num_layers=6)
-x = torch.randint(0, 10000, (1, 10))
-output = model(x)
-print(output.shape)  # 输出: torch.Size([1, 10, 10000])
+## 训练 Transformer
 
-可视化：参考 The Illustrated Transformer (中文翻译) 中的输出概率图。
-结论
-Transformer 架构通过其自注意力机制和并行计算能力，显著提高了序列到序列任务的性能。它已经成为现代 AI 模型的基石，特别是在自然语言处理领域。
-通过本教程，我们希望您能够对 Transformer 的工作原理有更深入的理解，并为进一步学习和应用这一强大的模型打下基础。
-参考文献
+### 训练过程
 
-The Illustrated Transformer (中文翻译)
-The Illustrated Transformer (中文翻译)
-Attention is All You Need
-Tensor2Tensor GitHub
-Harvard NLP PyTorch Guide
+Transformer 训练通常分为预训练和微调：
 
+- **预训练**：在大型语料库上使用因果语言建模（预测下一个 token）训练模型，学习通用语言表示。
+- **微调**：在特定任务（如翻译、问答）上调整模型参数。
+
+**损失函数**：交叉熵损失，比较预测概率与真实 token。
+
+**优化器**：通常使用 Adam 优化器，结合学习率调度（如 warmup）。
+
+**示例：**
+对于“我爱深度学习”，模型预测“学习”后的下一个 token，计算预测概率与真实 token 的损失，调整权重。
+
+## 与编码器-解码器 Transformer 的比较
+
+解码器-仅 Transformer（如 GPT）用于生成任务，关注自身输入。编码器-解码器 Transformer（如原始 Transformer）适合翻译：
+
+- **编码器**：处理输入序列，生成表示。
+- **解码器**：生成输出序列，关注编码器输出和自身输入。
+
+## 常见问题解答（FAQ）
+
+1. **为什么 Transformer 不使用循环结构？**
+   Transformer 通过自注意力并行处理整个序列，避免 RNN 的顺序处理瓶颈，提高效率。
+2. **如何处理长距离依赖？**
+   自注意力允许每个 token 关注所有其他 token，无论距离远近。
+3. **多头注意力的作用是什么？**
+   多头机制允许模型同时关注序列的不同方面，如语法和语义。
+4. **为什么需要位置编码？**
+   自注意力不考虑顺序，位置编码提供 token 位置信息。
+5. **Transformer 如何处理长序列？**
+   标准 Transformer 的计算复杂度为 ( O(n^2) )，长序列可能导致内存问题。高效变体（如 Longformer）通过稀疏注意力解决。
+
+## 高级话题与未来方向
+
+截至 2025 年，Transformer 技术持续发展：
+
+- **高效 Transformer**：如 [Longformer](https://arxiv.org/abs/2004.05150)，通过稀疏注意力处理长序列。
+- **多模态 Transformer**：如 [Vision Transformer](https://arxiv.org/abs/2010.11929)，将图像分块视为 token。
+- **稀疏 Transformer**：减少计算量。
+- **专家混合 (MoE)**：如 [Switch Transformer](https://arxiv.org/abs/2101.03961)，提升可扩展性。
+- **大型语言模型**：如 GPT-3，参数达 1750 亿。
+
+未来研究可能带来更高效或替代架构，但 Transformer 仍是 AI 核心。
+
+## 结论
+
+本教程通过详细解释、代码示例和图示，为初学者提供了 Transformer 架构的全面介绍。通过示例句子“我爱深度学习”，我们展示了每个步骤的作用和必要性。希望您通过本教程对 Transformer 有深入理解，并为进一步学习打下基础。
+
+## 参考文献
+
+- [Attention is All You Need - Transformer Paper](https://arxiv.org/abs/1706.03762)
+- [The Illustrated Transformer - Visual Guide](https://jalammar.github.io/illustrated-transformer/)
+- [Harvard NLP Transformer Tutorials](https://scholar.harvard.edu/binxuw/classes/machine-learning-scratch/materials/transformers)
+- [Longformer: Efficient Transformer for Long Sequences](https://arxiv.org/abs/2004.05150)
+- [Vision Transformer: Transformers for Images](https://arxiv.org/abs/2010.11929)
+- [Switch Transformer: Scalable Model with MoE](https://arxiv.org/abs/2101.03961)
